attempt to commit configure

--- a/tools/splat_ext/map_data.yaml
+++ b/tools/splat_ext/map_data.yaml
@@ -796,6 +796,30 @@
 - mgm_03_hit
 - gv_01_shape
 - gv_01_hit
+- spc_00_shape
+- spc_00_hit
+- spc_01_shape
+- spc_01_hit
+- spc_02_shape
+- spc_02_hit
+- spc_03_shape
+- spc_03_hit
+- spc_04_shape
+- spc_04_hit
+- spc_05_shape
+- spc_05_hit
+- spc_06_shape
+- spc_06_hit
+- spc_07_shape
+- spc_07_hit
+- spc_08_shape
+- spc_08_hit
+- spc_09_shape
+- spc_09_hit
+- spc_10_shape
+- spc_10_hit
+- spc_11_shape
+- spc_11_hit
 - kmr_bt03_shape
 - kmr_bt03_hit
 - kmr_bt04_shape
